feat: Security fixes, pagination implementation, and compilation fixes
- Security: Move hardcoded credentials to environment variables
- Security: Delete test file with exposed password
- Security: Add flutter_dotenv package and .env file setup
- Pagination: Add pagination to 13 repository methods (default limit: 100)
- Pagination: Update 16 UI pages to use pagination parameters
- Fix: Resolve compilation errors with supabase.client references
- Scalability: Ready for 10K users with proper pagination
- Documentation: Add comprehensive guides for security and scalability

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,12 @@ yarn-error.log
 # Environment
 .env
 .env.local
+.env.*
+!.env.example
 .secrets.local.cue
+
+# Test files with sensitive data
+lib/main_simple.dart
 
 # OS
 .DS_Store
